add chats and screen share blocks
