# internal/chat/types.go
@@ -6,6 +6,11 @@ import (
 	"github.com/google/uuid"
 )
 
+type CreateRequest struct {
+	Type string `json:"type" binding:"required"`
+	Name string `json:"name"`
+}
+
 type CreateResponse struct {
 	ID uuid.UUID `json:"id" binding:"required"`
 }
